project 1 completed in which when we click on the color the background color changes as per the color, project good for practicing add event listner

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
+    <!-- PROJECT 1 -->
+     
     <div class="canvas">
         <h1>Color Scheme Switcher</h1>
         <span class="button" id="grey"></span>
